--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535974.md#1" target="_blank">90后女子讲述向五星旗泼墨的背后故事</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535974.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f13217eaf8abe6d3366bf50f1ca2e48a-150x120.jpg" align ="left"></a>日前，一名身在美国洛杉矶的90后华人女青年，向中共五星旗泼墨后，立即引发外界关注，那么她泼墨的背后有多少辛酸故事呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 5:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535960.md#1" target="_blank">调查：多数欧洲人视中共激进竞争做法为威胁</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/4de8c470d914d79d74647cde06691826-150x120.jpg" align ="left"></a>一项新的调查显示，多数欧盟公民认为中共的“激进竞争做法”对他们的经济利益构成威胁。一些民众还表示，希望欧盟做得更多，最大程度地减少中共霸权对欧盟经济的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 4:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535692.md#1" target="_blank">【新闻看点】深陷四大危机 美中谈判北京多变</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/86041b386214a4c8543e3b83b337645f-150x120.jpg" align ="left"></a>美中谈判前夕，双方似乎都表现出了营造良好谈判气氛的愿望。特别是中方，大批量采购美国主要农产品。这是否意味着川普政府的贸易政策有变？中方接连示好的原因是什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 4:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535359.md#1" target="_blank">马化腾卸任前 腾讯传曾拒交客户贷款数据</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1074348392-150x120.jpg" align ="left"></a>马云从阿里巴巴集团退休只十日之后，另一个中国互联网巨擘腾讯的董事会主席马化腾亦卸任腾讯征信法人，业内指是官方全面接管垄断信贷资料，也标志着习近平对进入民企作实质的操作阶段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535507.md#1" target="_blank">中方代表团取消访问美农业州行程 提前回国</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/2617b24dbf47adf0ffe55a1ee03caa18-150x120.jpg" align ="left"></a>中方突然取消行程、阻碍了中国重新购买美国农产品的希望，也增加外界对本周谈判进展的揣测。美中副部长级贸易谈判本周四、周五在华盛顿召开，中方加大进口美国农产品是主要议题之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535642.md#1" target="_blank">万名北京媒体人被迫参加“学习强国”考试</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535642.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/DzQM8csUcAADqyv-150x120.jpg" align ="left"></a>中共中宣部8月23日公布新规，将通过“学习强国”手机应用程序，对全国新闻编采人员展开在线岗位培训考试。最新消息称，北京14家官方网络媒体的约10,000名记者和编辑将参加“试点测试”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535556.md#1" target="_blank">吴小晖被中共没收资产857亿 创最高纪录</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535556.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/9-wu-xiaohui_meitu_3-150x120.jpg" align ="left"></a>中国安邦集团原董事长吴小晖，因非法集资与职务侵占罪被判处18年徒刑后，近期传出上海法院没收他的105亿人民币财产，并追缴不法所得752亿人民币，总金额创下中共法院裁罚金额的最高纪录。 ?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535602.md#1" target="_blank">参议员：美中协议要解决中共盗窃知识产权</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535602.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_19M1AI-150x120.jpg" align ="left"></a>民主党参议员克里斯·康斯（Chris Coons）周五（9月20日）接受采访时表示，川普（特朗普）总统需要确保，美国与中方达成的任何贸易协议都要包括防止美国知识产权再被中共盗窃的措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 12:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535332.md#1" target="_blank">张奂才：北京惊魂</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/EE4HL5gU4AAyKWj-150x120.png" align ="left"></a>中共“十一”阅兵在即，北京安保步步升级，此外，中共还要进行3次大演练，同时进行交通管制，封路、封地铁、公交车，有民众到了家门口却进不得，民众怨声四起，有人根据自己的经历写了一篇北京地铁惊魂，让不少北京人感同身受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 10:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534894.md#1" target="_blank">彭斯：是自由而非社会主义造就美国繁荣</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534894.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/3c5ff0860e77fd03cd9ef8e05360cafa-150x120.jpg" align ="left"></a>周四（9月19日），美国副总统彭斯接受美媒采访时，再次强调美国永远都不会是一个社会国家。彭斯表示，美国人都知道，是“自由”非不是“社会主义”造就了这个全球最繁荣的国家；也正是“自由”而非“社会主义”让美国成为全球希望的灯塔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 10:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535184.md#1" target="_blank">宁夏交通厅两任厅长被判刑 曾共事十多年</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535184.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/zhousu-1200x800-v1-600x400-2-150x120.jpg" align ="left"></a>继宁夏交通运输厅前厅长许学民8月获刑后，另一任厅长、许学民的前任周舒近日以受贿1720万余元被判处有期徒刑13年。周舒、许学民曾共事十多年......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 9:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11533718.md#1" target="_blank">【翻墙必看】经济更糟 曝贸易谈判中方底线</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11533718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-56916318@1200x1200-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
@@ -20,22 +30,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533336.md#1" target="_blank">美“联邦快递”飞行员在广州机场被拘留</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533336.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1013657596-150x120.jpg" align ="left"></a>美国联邦快递公司（FedEx）一名在华飞行员遭到中共当局逮捕，警方指其涉嫌“运输弹药”，这是联邦快递“往香港邮刀枪”事件后的最新一起案例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 5:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532646.md#1" target="_blank">徇私枉法及受贿 广西一前反贪局长被双开</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532646.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/luliquan-Web-Banner-1200x800-v1-150x120.jpg" align ="left"></a>中共广西钦州市检察院检察委员会专职委员、原反贪局局长陆立泉日前被“双开”并移送司法。陆立泉被指徇私枉法，以检察权谋取私利，受贿数额特别巨大等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532817.md#1" target="_blank">【新闻看点】五大因素 香港对中国不可或缺</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532817.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/130911100058100311-600x400-150x120.jpg" align ="left"></a>香港主权移交中国二十多年，已经成为中国与世界连结的桥梁。如果美国取消香港的特殊地位，将对中国经济造成很大影响。外界认为，香港的“一国两制”具有5大优势。这5大因素，彰显它对中国经济发展不可或缺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:09 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532988.md#1" target="_blank">十一临近 香港成中共“维稳”重点</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/photo_2019-08-18_23-05-42-1-150x120.jpg" align ="left"></a>在内外交困之际，中共为了举行十一阅兵等大型活动，如临大敌，大陆各地陆续进入“临战”状态。而作为持续数个月反送中运动的香港，也成为中共防范的主要对象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 2:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533082.md#1" target="_blank">川普总统裤兜常揣一卷钞票 为了一个用途</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ac4fc36f68b3c0c9e45ff9b23071917d-150x120.jpg" align ="left"></a>“昨天在您登上空军一号时，我们摄影师同事看到您裤兜里露出一些20美元的钞票，这是用来干什么的？” 川普（特朗普）总统解释说，这是为了随时给酒店人员的小费，他在谈论这个话题时露出了招牌式的微笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 1:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533097.md#1" target="_blank">陈方安生：特首无辞职自由 一国两制怎会好</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11533097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/190325203303100699-150x120.jpg" align ="left"></a>香港人民的反送中运动已经超过了百日，引来了民主国家对中共的各种抗议和谴责。日前，前香港政务司司长陈方安生接受了英国广播公司（BBC）访问，表态自己支持反送中运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 1:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532396.md#1" target="_blank">阻红色渗透 台跨党派合推境外势力透明法</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532396.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/PO_X8787-150x120.jpg" align ="left"></a>为防范中共势力渗透来影响台湾，台湾基进与民进党立委尤美女等人19日召开记者会，公布由两党合作的“境外势力影响透明法”草案。草案条文规定，若法务部认为有组织或个人与境外势力有关，且意图影响选举或通讯传播活动，得命其登记为“境外势力代理人”。尤美女说，后续将全力寻求连署，力推法案通过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 1:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532724.md#1" target="_blank">华为5G手机亮相 豪华外表下有致命硬伤</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1169449178-150x120.jpg" align ="left"></a>华为5G最新型手机亮相了！它的豪华外型力压群雄，更多功能超过三星Galaxy10，更多相机打败苹果iphone11， 然而一个巨大缺陷让该手机“挥剑自宫”。德国慕尼黑当地时间9月19日星期四，中国电信巨头华为公布其最新的智能手机，Mate30和Mate30Pro。尽管发布会当天故作神秘，但其实华为 Mate 30 系列的外型和规格早被大量外泄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 10:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531193.md#1" target="_blank">【翻墙必看】传许家印被边控 中共对富豪下手？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/140826100750100615-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.杨宁：许家印传被边控 陆港富豪寒意彻骨
-近日，大陆突然传出知名房地产商、广州恒大集团董事局主席许家印被边控的消息，而这与不久前香港富豪李嘉诚被中共党媒狠批、阿里巴巴董事局主席马云被退休似乎不无关联，这一系列中共指向陆港富豪的行动，让这些富豪们不仅仅是感到了寒意袭身，而是寒意彻骨。
-
-2.再受重创 华为被关.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 10:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532468.md#1" target="_blank">湖南黑老大行贿细节曝光 涉多名政法官员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/dayong1-150x120.jpg" align ="left"></a>有中共官员当其“保护伞”的湖南黑老大文烈宏以涉诈骗、行贿等15罪今年1月被判处无期徒刑。近日官方公布了文烈宏的行贿细节及对象，其中包括湖南长沙市公安局前常务副局长单大勇、市委政法委前副书记谭学军等多名政法系统官员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 9:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532662.md#1" target="_blank">【热点互动】香港法案对中共有多大震慑力？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532662.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c5d8b39a4f9e4d_ttl7dayOag_f83a0516c2614e37-150x120.jpg" align ="left"></a>周二（9/17），美国国会就香港局势召开听证会。国会两党议员均表示会迅速通过《香港人权与民主法案》。另一方面，台湾选举被投下震撼弹：郭台铭宣布不参与2020总统选举。那么《香港人权与民主法案》对中共会有多大震慑力？郭台铭弃选的背后原因是什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 9:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531957.md#1" target="_blank">港警滥暴受害者希望众筹千万 控告前线警察</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531957.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Capture1-1-150x120.jpg" align ="left"></a>香港反送中运动持续三个多月以来，已有超过1,400名市民遭到拘捕。9月19日，有6名遭港警滥暴的受害者召开记者会，宣布发起“反滥权大控诉众筹计划”，首阶段目标为1000万港元。受害者强调，将优先考虑控告施袭的前线警员本人，令前线警员知道要为其行为负责，以遏止滥权趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 6:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank">程晓容：香港三项活动取消 中共十一添堵</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/20190726-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>三个活动在香港被取消，发出同一个信号：中共自讨没趣，亲共者自取其辱。在香港风暴中，正邪分明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 6:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535524.md#1" target="_blank">善良护士救人之危 一年后获惊喜流泪满面</a><br></h3>9月15日，一个卖卖柠檬水的小女孩的生意简直太好了！三十多人围着她的摊位，原来这些顾客跟女孩的妈妈之间有“救命之恩”，这是怎么回事呢？CNN9月20日报导了这个故事的始末：2018年9月，美国印第安纳州智利（Chili）市的一名护士达恩·斯特奇（Daryn Sturch）和她的女儿布扬恩（Bryanne）驾车途中，忽然遇到一起车祸，当时密尔沃基钢铁机车骑士团.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 12:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11533929.md#1" target="_blank">卸任茅台集团总经理4年 刘自力被逮捕</a><br></h3>9月20日，中国贵州茅台酒厂（集团）有限责任公司党委前副书记、副董事长、总经理刘自力被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 12:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532095.md#1" target="_blank">叶选平去世 传叶剑英习仲勋为对方长子定仕途</a><br></h3>9月17日，中共已故元老叶剑英的长子、中共全国政协前副主席、广东省前省长叶选平在广州去世。有报导说，叶剑英与习仲勋两家关系密切，并早已互为对方长子安排了政治未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 9:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid277_4.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_4.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid277_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_4.htm">http://www.epochtimes.com/gb/ncid277_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
